--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cu124
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
@@ -71,7 +72,7 @@ SQLAlchemy==2.0.36
 sqlparse==0.5.3
 sympy==1.13.1
 threadpoolctl==3.5.0
-torch==2.5.1+cu124
+torch==2.5.1+cu124 
 torchaudio==2.5.1+cu124
 torchmetrics==1.6.1
 torchvision==0.20.1+cu124
