--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ greenlet==3.1.1
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
+ipykernel==6.29.5
 Jinja2==3.1.3
 joblib==1.4.2
 kiwisolver==1.4.8
