--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ contourpy==1.3.1
 cycler==0.12.1
 databricks-sdk==0.40.0
 Deprecated==1.2.15
+diffusers==0.32.1
 docker==7.1.0
 filelock==3.13.1
 Flask==3.1.0
